added some results for chl

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -99,14 +99,14 @@ The precipitation data were downloaded from two different sources.  The first wa
 
 We investigated correlations between environmental variables and sardine catch during spawning and post-spawning periods using generalized additive models [GAMs, @Wood2017].  GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is similar to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.   
 The model for catch in quarter 3 was of the form
-$$ln(S_t) = \alpha + f_1(c_1) + f_2(c_2) + g_1(ln(C_{t-1})) + g_2(ln(C_{t-2})) + \epsilon$$
+$$ln(S_t) = \alpha + f_1(c_1) + f_2(c_2) + s_1(ln(C_{t-1})) + s_2(ln(C_{t-2})) + \epsilon$$
 where $ln(S_t)$ is the log catch in the 3rd quarter of year $t$.  Catch in the 3rd quarter (July-Aug) captures mainly spawning age fish as it overlaps with the tail end of the spawning season---the fishery is closed July to mid-August during the height of the summer monsoon and spawning season.  The model seeks to explain the variability in catch in the 3rd quarter via a non-linear function of the covariates, $c_1$ and $c_2$, plus a non-linear function of total catch in prior years.   The catches were logged to stabilize and normalize the variance.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  It is a form of model that is often used for modelling the effects of covariates on the number of fish that recruit into the fishery [e.g. @JacobsonMacCall1995, add others or a textbook].  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the spawning biomass exposed to the fishery.  The relevant covariate may be in the concurrent with the catch or in a prior year.
 
 The model for catch in the non-spawning quarters (October to June) took a similar form
-$$ln(N_t) = \alpha + f_1(c_1) + f_2(c_2) + g_1(ln(S_{t-1})) + g_2(ln(N_{t-1})) + \epsilon$$
+$$ln(N_t) = \alpha + f_1(c_1) + f_2(c_2) + s_1(ln(S_{t-1})) + s_2(ln(N_{t-1})) + \epsilon$$
 where $ln(N_t)$ is the log of the total catch in the post-spawning season October to June (a nine-month period that spans two calendar years).   We included the catches during the spawning season ($S_t$) separately from the non-spawning season ($N_t$).  The covariates that affect the egg and larval survival may be quite different from those affecting the age-1 to age-2 or age-2 to age-3 survival.  We wanted to be able to model these separately.  The covariates tested are those discussed in the section on covariates that have been hypothesized to drive both survival and growth of juvenile fish and the factors that lead migration of fish inshore and thus exposed to the coastal fishery.
 
-Model selection was conducted in a step-wise fashion.  The length of the covariate data was 33-35 years (1982 to 2015 or 2017) for most covariates and this was not sufficient for fitting all covariates simultaneously.  The model for the effect of the past of biomass on current biomass (density-dependence) was first determined.  Once a sufficient model for the density-dependence was determined, the covariates were studied individually and then jointly.  F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved.  Multi-modal or overly wiggly response curves would not make sense for our covariates.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using mgcv package in R] and fixed the smoothing term at an intermediate value.
+Model selection was conducted in a step-wise fashion.  The length of the covariate data was 33-35 years (1982 to 2015 or 2017) for most covariates and this was not sufficient for fitting all covariates simultaneously.  The model for the effect of the past of biomass on current biomass (density-dependence) was first determined.  Once a sufficient model for the density-dependence was determined, the covariates were studied individually and then jointly.  F-tests and AIC on nested sets of GAM models [@Woodetal2016] were used to evaluate the support for models.  One feature of GAMs is that they allow the ‘flexibility’ or smoothing parameter of the response curve to be estimated. However we fixed the degree of flexibility so that reasonably smooth responses were achieved.  Multi-modal or overly wiggly response curves would not make sense for our covariates.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value.
 
 # Results
 
@@ -118,15 +118,15 @@ The results were similar for models of the landings  during the non-spawning mon
 
 ## Environmental covariates as explanatory variables
 
-There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the catch during the spawning months (Table `r ref("tabappB:spawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either the 1982-2015 remote-sensing precipitation data (GPCP precipitation) were used or the 1956-2015 land-based precipitation data were used (Table `r ref("tabappB:spawner-model-precip", pre="B")`).
+There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the catch during the spawning months (Table `r ref("tabappB:spawner-model-precip", pre="B")`) nor the non-spawning months (Table `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either precipitation during monsoon (Jun-Jul) or pre-monsoon (Apr-May) were used as the covariate.
 
-However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 3, Table `r ref("tabappB:spawner-model-sst", pre="B")`).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC was a model with only the past year and a non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:SSTeffect")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines (*citations from Jacobson and MacCall*).  The $R^2$ for this model was 0.50 (Table 3).
+However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 3, Table `r ref("tabappB:spawner-model-sst", pre="B")`).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC was a model with only the current year and a non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:cov-effects")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines (*citations from Jacobson and MacCall*).  The $R^2$ for this model was 0.40 (Table `r ref("tab:covariate-models")`).
 
-The strongest predictor of the catch during the spawning season however was the upwelling strength during Jan-Mar (Table 3, Table `r ref("tabappB:spawner-model-upw", pre="B")`), during a period when the young of the year and age-1 fish would be found feeding in large shoals in the coastal region.  The is the time of year with the second highest catches that are dominated by small-sized fish (*citation*).  The model with lowest residual deviance included a non-linear effect of upwelling in the prior year and two years prior.  As for SST, the cost in terms of low of degrees of freedom led to this model not being the best supported.  The best supported model included only the upwelling strength in the prior year, not two years prior, and included a non-linear response (Table 3).  The $R^2$ for this model was 0.63 (Figure `r ref("fig:fittedmodel")`).
+The strongest predictor of the catch during the spawning season however was the upwelling strength during Jan-Mar (4-6 months prior) in the previous season (Tables `r ref("tab:covariate-models")` and `r ref("tabappB:spawner-model-upw", pre="B")`).  Jan-Mar is a period when the young of the year and age-1 fish would be found feeding in large shoals in the coastal region.  This is also the time of year with the second highest catches and catches that are dominated by small-sized fish (*citation*).  The best supported model included only the upwelling strength in the prior year, without SST included as a covariate (Table `r ref("tab:covariate-models")`).  The $R^2$ for this model was 0.60 and the fitted versus observed catches for this model are shown in Figure `r ref("fig:fittedmodel")`.
 
-*Still to do.  Test interactions between the variables that turned out to be important.  Might not have enough data*
+For catch in the non-spawning months (Oct-Jun), sea surface temperature during the spawning months in the current season was a significant predictor similar to what was found for catches in the spawning months.  Upwelling in the prior season was also a significant predictor, but the important months were Oct-Dec.  This is period is important for larval and early juvenile survival and growth, and other studies have also found this to be a critical period for future stock size in sardines (*citation*).  The model with the lowest residual variance and lowest AIC was the model which included both the SST and upwelling covariates (Table `r ref("tab:covariate-models")`).  The $R^2$ for this model was 0.73 and the fitted versus observed catches for this model are shown in Figure `r ref("fig:fittedmodel")`.
 
-*Still to do.  Same analyses for the catch in the post-spawning months.*
+Chlorophyll-a density is speculated to be an important predictor of larval sardine survival  and growth.  In addition, sardines shoal in response to coastal chlorophyll blooms, which brings them in contact with the coastal fisheries.  Thus Cholorophyll-a density is assumed to be an important either covariate or driver of future or current sardine catches.  However, we had chlorophyll-a remote-sensing data only from 1998 onward. Our simplest covariate model required 5 degrees of freedom, thus we were limited in the analyses we could conduct.  In addition, the years, 1998-2014, have relatively low variability in catch sizes; the logged catch sizes during this period range from 10-11 during the spawning months and 11-12 during the nonspawning months.  Second degree polynomial models were fit (Appendix C) to the average log chlorophyll-a density in the current and prior season from quarters 3 (Jul-Sep), 4 (Oct-Dec), and 1 (Jan-Mar).  Chlorophyll-a density was not a significant predictor for the spawning catch for any of the tested combinations of current or prior season and quarter.  The only significant effect was seen for non-spawner catches using chlorophyll-a density in Oct-Dec of the current and prior season (Table `r ref("tabappC:nonspawner-model", pre="C")`).  This matches results which found that the upwelling index in Oct-Dec of the prior season was a predictor for the non-spawning months' catch.  The upwelling index and chlorophyll-a density are both indices of low-trophic level productivity.
 
 # Discussion
 
@@ -134,8 +134,6 @@ Needs to be written.  The results make sense biologically and are supported by o
 
 Discuss why precipitation did not come up.
 Implications.  Supports the use of SST and upwelling indices for forecasting.
-
-Do a pilot analysis of chlorophyll however the data available are short and will be inconclusive.
 
 # References
 
