--- a/Figures.Rmd
+++ b/Figures.Rmd
@@ -55,6 +55,15 @@ par(oldpar)
 cat("\\clearpage")
 ```
 
+```{r fig-cartoon, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:cartoon")), message=FALSE, warning=FALSE}
+figfile = system.file("docs", "cartoon.png", package="SardineForecast")
+knitr::include_graphics(figfile)
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
 ```{r cov.mon, echo=FALSE,fig.cap=paste("Figure",  ref("fig:COVts")), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
 ### FIGURE covariates
 oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
